# rccn_userspace_ws

./: .devenv  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Dockerfile.base  Dockerfile.build  Dockerfile.cross  Dockerfile.dev  build.sh  container.sh  cross-build.sh  devcontainer.sh  rust_small_build.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  ros_entrypoint.sh
.github/workflows/: rccn_usr_ws.yml
aider/: commit.txt
scripts/: ostree-push.sh
src/rccn_usr/: Cargo.toml  package.xml
src/rccn_usr/src/: config.rs  lib.rs  r2r.rs  time.rs  types.rs
src/rccn_usr/src/service/: macros.rs  mod.rs  util.rs
src/rccn_usr/src/transport/: config.rs  manager.rs  mod.rs  ros2.rs  transport_manager.rs  udp.rs  zenoh.rs
src/rccn_usr_comm/: Cargo.toml  README.md  package.xml
src/rccn_usr_comm/etc/: config.yaml
src/rccn_usr_comm/src/: config.rs  frame_processor.rs  main.rs
src/rccn_usr_comm/src/transport/: mod.rs  ros2.rs  udp.rs
src/rccn_usr_example_app/: Cargo.toml
src/rccn_usr_example_app/src/: app.rs  command.rs  example_service.rs  main.rs  service.rs
src/rccn_usr_example_app/src/example_service/: command.rs  service.rs
src/rccn_usr_gen/: Cargo.toml
src/rccn_usr_gen/src/: lib.rs
src/rccn_usr_gen/test_data/: base.xml  parameters-dt-v2.xml
src/rccn_usr_msgs/: CMakeLists.txt  package.xml
src/rccn_usr_msgs/action/: StressTest.action
src/rccn_usr_pus/: Cargo.toml
src/rccn_usr_pus/src/: app.rs  lib.rs
src/rccn_usr_pus/src/parameter_management_service/: command.rs  mod.rs  service.rs
src/rccn_usr_pus_macros/: Cargo.toml
src/rccn_usr_pus_macros/src/: lib.rs
src/vacuum_test_node/: Cargo.toml  package.xml
src/vacuum_test_node/launch/: vacuum_test.launch.py
src/vacuum_test_node/src/: main.rs
src/vacuum_test_node/src/stress_service/: command.rs  mod.rs  service.rs
