[package]
name = "rccn_usr"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
r2r = "0.9.2"
crossbeam-channel = "0.5.8"
async-std = "1.12.0"
satrs = "0.2.1"
thiserror = "1.0.65"
serde_yaml = "0.9.34"
serde = "1.0.214"
paste = "1.0"

[env]
IDL_PACKAGE_FILTER = { value = "std_msgs;rccn_usr_msgs" }