[package]
name = "rccn_usr_comm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_yaml = "0.9.34"
serde = { version = "1.0.213", features = ["derive"] }
ccsds_protocols = { git = "ssh://git@gitlab.com/raccoon-os/ccsds-protocols-rs.git", version = "0.1.0" }
crossbeam-channel = "0.5"
futures = "0.3.31"
async-std = "1.13.0"
r2r = "0.9.2"

[env]
IDL_PACKAGE_FILTER = { value = "std_msgs;rccn_usr_msgs" }