<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rccn_usr_comm</name>
  <version>0.0.1</version>
  <description>Message definitions for the RACCOON OS Userspace</description>
  <maintainer email="j.diezlopez@tu-berlin.de">Your Name</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cargo</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rccn_usr</depend>
  <depend>rccn_usr_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>