[package]
name = "rccn_usr_example_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
binary_serde = "1.0.24"
crossbeam-channel = "0.5.13"
futures = "0.3.31"
rccn_usr = { version = "0.1.0", path = "../rccn_usr" }
rccn_usr_pus = { version = "0.1.0", path = "../rccn_usr_pus" }
satrs = "0.2.1"
spacepackets = "0.12.0"
tokio = "1.41.1"
