[package]
name = "rccn_usr_pus"
version = "0.1.0"
edition = "2021"

[dependencies]
rccn_usr = { version = "0.1.0", path = "../rccn_usr" }
rccn_usr_pus_macros = { version = "0.1.0", path = "../rccn_usr_pus_macros" }
satrs = "0.2.1"
spacepackets = "0.12.0"
thiserror = "1.0.66"
xtce-rs = { git = "https://github.com/jdiez17/xtce-rs", branch = "bitbuffer_write_bits", version = "0.1.0" }

[dev-dependencies]
crossbeam = "0.8.4"
